--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "node-sass": "^4.3.0",
     "reqwest": "^2.0.5",
+    "sass-loader": "^4.1.1",
     "vue": "^2.1.0",
     "vue-router": "^2.1.1",
     "vuex": "^2.1.1"
