--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "reqwest": "^2.0.5",
     "sass-loader": "^4.1.1",
     "vue": "^2.1.0",
+    "vue-awesome": "^2.0.3",
+    "vue-headroom": "^0.2.0",
+    "vue-parallax": "^1.1.1",
     "vue-router": "^2.1.1",
     "vuex": "^2.1.1"
   },
